2006-09-01  Vincent Ladeuil  <v.ladeuil+lp@free.fr>
	Cosmetic changes.

	* webdav.py: 
	Do not try to import pycurl to check dependencies, http._pycurl
	will do that fairly well itself.
	(HttpDavTransport.put): Delete unused variable.

2006-08-29  Vincent Ladeuil  <v.ladeuil+lp@free.fr>
        PUT can do append ! Rejoice !

	* webdav.py:
	Add and update TODOs.
	(HttpDavTransport.__init__):  Declare _accept_ranges,  defaults to
	True.
	(HttpDavTransport._head): New method.
	(HttpDavTransport.append):     Select _append_by_head_put or
	_append_by_get_put depending on _accept_ranges.
	(HttpDavTransport._append_by_head_put): New method.
	(HttpDavTransport._append_by_get_put):  New   method  (was  append
	before).
	(HttpDavTransport.put): Uses _put_file do provide an atomic PUT.
	(HttpDavTransport._put_file): New method doing a bare PUT.
	(HttpDavTransport._put_ranged):   New  method  helping   doing  an
	appended PUT.

	* test_webdav.py: 
	Add more TODOs.
	(TestingDAVRequestHandler.do_PUT):  Handle  Content-Range optional
	header to do appends.

	* __init__.py: 
	Requires bzr >= 0.11.0dev.

2006-08-28  Vincent Ladeuil  <v.ladeuil+lp@free.fr>
        Prepare merge.

	* webdav.py:
	Add TODOs for  looking at PATCH with Apache and doing
	an urllib implementation. Othe cosmetic changes.

	* test_webdav.py: 
	Fix spurious spaces.

	* NOTES: 
	(Extensions): Remark about PATCH in Apache.

2006-08-27  Vincent Ladeuil  <v.ladeuil+lp@free.fr>
	Implements https://features.launchpad.net/products/bzr.webdav/+spec/curl-persistence.
	
	* webdav.py:
	(HttpDavTransport.__init__):  Copy  the  shared curl  object  when
	cloning.
	(HttpDavTransport._set_curl_common_options):      New      method.
	Initialize the shared curl object.
	(HttpDavTransport._set_curl_options):  New   method.   Reset  used
	options to facilitate sharing of the curl object.
	(HttpDavTransport._add_header): New method.
	(HttpDavTransport._perform): New method.
	(HttpDavTransport.has, HttpDavTransport._get_full,